<resources>
    <string name="app_name">easyRide</string>
    <string name="edit_text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_view_welcome">easyRide shuttle mangement</string>
    <string name="text_view_register">Don\'t have an account? Sign up here</string>
    <string name="text_view_forgot_password">Forgot your password? click here</string>
    <string name="text_view_or">OR</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="button_register">Create Account</string>
    <string name="title_registration">Registration</string>
    <string name="email">Email</string>
    <string name="title_password_reset">Password Reset</string>
    <string name="body_password_reset">To reset your password please enter email address and new password will be sent to your mail inbox.</string>
    <string name="button_send_mail">Send New Password</string>
    <string name="alert_dialog_body_phone">Welcome to easyRide, to see your registered friends you must first enter your phone number in "profile" tab before you continue</string>
    <string name="alert_dialog_title_phone">Enter You Phone Number</string>
    <string name="rides">Rides</string>
    <string name="map">Map</string>
    <string name="request">invitations</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_dialog_confirm">Confirm</string>
    <string name="alert_dialog_no_thanks">no thanks</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_success">The changes have benn saved</string>
    <string name="error">\"ERROR: \"</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name_colon">First name:</string>
    <string name="last_name_colon">Last name:</string>
    <string name="email_colon">Email:</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="button_edit">edit</string>
    <string name="enter_fields">Please enter all fields</string>
    <string name="register_success">Successfully registered</string>
    <string name="scheduled_rides">Scheduled Rides</string>
    <string name="participants">Participants</string>
    <string name="dest_colon">Destination:</string>
    <string name="src_colon">Starting Point:</string>
    <string name="add_ride">Add Ride</string>
    <string name="ride_name">Ride name</string>
    <string name="ride_details">Ride Details</string>
    <string name="destination">Destination</string>
    <string name="starting_point">Starting Point</string>
    <string name="add">ADD</string>
    <string name="saving_changes">\"Saving changes, wait... \"</string>
    <string name="rides_requests">Rides requests</string>
    <string name="confirm">Confirm</string>
    <string name="ride_added">Ride has been added successfully</string>
    <string name="incorrect_email_adress">Incorrect email address</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="login_failed">Login has failed</string>
    <string name="please_enter_mail">Please Enter Your Mail Address</string>
    <string name="verification_email_sent">Verification email has sent</string>
    <string name="friends_permission_importance">The permission is really important to see who in your friend list is already registered to the application</string>
    <string name="confirmed">confirmed</string>
    <string name="new_ride_request_title">New ride request</string>
    <string name="new_ride_request_body">You received new ride request from</string>
    <string name="add_participants">Add Members</string>
    <string name="add_participant">Add Participant</string>
    <string name="delete_ride">Delete Ride</string>
    <string name="leave_ride">Leave Ride</string>
    <string name="arrival_confirmed">Arrival confirmed</string>
    <string name="arrival_not_confirmed">Arrival not confirmed</string>
    <string name="title_activity_map">Map</string>
    <string name="date">Ride Date</string>
    <string name="date_colon">Date:</string>
    <string name="date_select">Select ride date</string>
    <string name="take_current_pos">would you like to use current position as your default address</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="never_ask_again">Never ask again</string>
    <string name="accept_ride">Ride as been accepted</string>
    <string name="invite_friend">Invite friend</string>
    <string name="address">Default address</string>
    <string name="address_colon">Default address:</string>
    <string name="pickup_location">Pickup location</string>
    <string name="wich_location">Which location you prefer ?</string>
    <string name="saved_location">Your saved Location</string>
    <string name="type">Type</string>
    <string name="my_address">My address</string>
    <string name="start_point_not_found">Didn\'t found your starting point location</string>
    <string name="address_not_found">Didn\'t found your address</string>
    <string name="add_address_location">To use saved address you have to enter you address in profile section</string>
    <string name="google_direction_api" translatable="false">AIzaSyCatAgGuCDmh-XElvu8wUrlB5xX67pG_9U</string>
    <string name="add_phone">Phone number</string>
    <string name="add_friend">Friends list</string>
    <string name="name">Name</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="sms_invite">Hello, I invite you to new ride to accept the ride please click here: </string>
    <string name="other">other</string>
    <string name="new_ride">new ride</string>
    <string name="participants_list">Participants list:</string>
    <string name="could_not_find_location">couldn\'t find starting point or destination point location</string>
    <string name="loading">Loading please wait…</string>
    <string name="ride">ride</string>
    <string name="no_rides_to_display_add_new_ride_by_click_on_ride_button">no rides to display, add new ride by click on "ride" button</string>
    <string name="your_invitation_list_is_empty">Your invitation list is empty</string>
    <string name="invite_message">I invite you for a new ride call </string>
    <string name="invitation_link">Ride confirmation link:</string>
    <string name="add_contact">Contact list</string>
    <string name="search">Search</string>
    <string name="contact_permission__importance">The permission is really important to see your contacts list</string>
    <string name="sms_permission_importance">" To add participant from contact list you have to grant permission, In order to send message via SMS"</string>
    <string name="application_version">Application Version</string>
    <string name="general_setting">General Setting</string>
    <string name="notifications">Notifications</string>
    <string name="enable_invitation_notifications">Enable/Disable ride invitation notifications</string>
    <string name="night_mode">Night mode</string>
    <string name="enable_disable_night_mode">Enable/Disable Night mode</string>
    <string name="personal_setting">Personal Setting</string>
    <string name="email_address">Email Address</string>
    <string name="change_account_email_address">Change account email address</string>
    <string name="password">Password</string>
    <string name="change_login_password">Change login password</string>
    <string name="delete_account">Delete Account</string>
    <string name="remove_account_with_all_saved_data">Remove account with all saved data</string>
    <string name="new_email_address">New email address</string>
    <string name="new_password">New password</string>
    <string name="sure_delete_acount">Are you sure you want to delete your account?</string>
    <string name="old_password">Old password</string>
    <string name="invite">Invite</string>
    <string name="time">Ride Time</string>
    <string name="time_colon">Time: </string>
    <string name="share_message" translatable="false">easyRide Application:\nhttps://play.google.com/store/apps/details?id=arik.easyride</string>
    <string name="time_or_date_empty">Please enter time and date</string>
    <string name="area">Area</string>
    <string name="add_phone_number_message">In order to see your in-app friends, you must add your phone number to the profile section</string>
    <string name="current_location">Current</string>
    <string name="ride_invite">Ride invitation</string>
    <string name="ride_name_message">Ride name</string>
    <string name="phone">phone</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="default_address">Default</string>
    <string name="there_is_no_friends_to_display_you_can_invite_new_friends_by_clicking_on_invite_friends_button">There is no friends to display, you can invite new friends by clicking on \"Invite Friend\" button</string>
    <string name="you_don_t_have_friends_in_order_to_add_new_participants_you_have_to_invite_your_friends_to_the_app">You don\'t have friends, in order to add new participants you have to invite your friends to easyRide application</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="station">Stations:</string>

</resources>